# 0000

./: Dockerfile  Dockerfile.simple  Procfile  README.md  docker-compose.production.yml  install-cli.sh  package-lock.json  package.json  railway.json  setup-infrastructure.sh  start.sh
agent-gateway/: package-lock.json  package.json
ai-agentsd/: Dockerfile  package.json
ai-contentd/: Dockerfile  package.json
ai-datad/: Dockerfile  package.json
ai-deploymentd/: Dockerfile  package.json
ai-inferenced/: Dockerfile  package.json
ai-marketplaced/: Dockerfile  package.json
ai-trainingd/: Dockerfile  package.json
ai-validationd/: Dockerfile  package.json
aim-cli/: README.md  package-lock.json  package.json  tsconfig.json
config/: monitoring.env  production.env  staging.env
disputes/: Dockerfile  package-lock.json  package.json
gateway/: Dockerfile  package-lock.json  package.json
ledgerd/: Dockerfile  package-lock.json  package.json
logd/: package-lock.json  package.json
logd/src/: main.ts  (+1 more)
marketplace/: package-lock.json  package.json
metering/: package-lock.json  package.json
mintd/: Dockerfile  package-lock.json  package.json  tsconfig.json
nginx/: nginx.conf
onramp/: Dockerfile  package-lock.json  package.json
pqsigner/: Cargo.toml  Dockerfile
pqsigner/src/: crypto.rs  key_manager.rs  lib.rs  main.rs
scripts/: deploy-production.sh  deploy.sh  e2e.sh  e2e_agents.sh  migrate.sh  start-all.js  start-production.sh
treasury/: Dockerfile  package-lock.json  package.json
verifier-advanced/: Dockerfile  package-lock.json  package.json
(+199 files in other folders)
