[package]
name = "pqsigner"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros", "tracing"] }
tokio = { version = "1.0", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Base64 encoding
base64 = "0.21"

# Quantum-safe cryptography - PRODUCTION IMPLEMENTATION
pqcrypto-dilithium = "0.5"
pqcrypto-sphincs = "0.5"
pqcrypto-kyber = "0.7"
# Additional crypto dependencies
ring = "0.17"
rand = "0.8"
sha2 = "0.10"

# File system operations
std = []

[dev-dependencies]
tokio-test = "0.4"
